# engine-test-idk

./: CMakeLists.txt  README.md  build.bat  component_pool.h  ecs_types.h
render/: rendering_components.h  sprite_batch.h  texture_manager.h
src/: ecs_registry.h  game.h  game_components.h  game_systems.h  main.cpp  test_basic.cpp
